Merge branch 'master' into litecommands-3.0.0